[package]
name = "tutorial"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "tutorial"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = [ "init-if-needed"] }
anchor-spl = "0.24.2"
vipers = "^2"
num-traits = "0.2"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
